[gd_scene load_steps=5 format=3 uid="uid://bxjrfin68xj6c"]

[ext_resource type="Script" uid="uid://bu76vvmx8jgwu" path="res://UI/Health_bar/health_bar.gd" id="1_sgig1"]
[ext_resource type="Texture2D" uid="uid://cff27d3he75ac" path="res://UI/Health_bar/heart_full.png" id="2_oocra"]
[ext_resource type="Texture2D" uid="uid://cs5off6eti3tk" path="res://UI/Health_bar/heart_half.png" id="3_4pxdq"]
[ext_resource type="Texture2D" uid="uid://smyu6iwaaw86" path="res://UI/Health_bar/heart0.png" id="4_m8nf8"]

[node name="Health_bar" type="Node2D"]
script = ExtResource("1_sgig1")
heart_f = ExtResource("2_oocra")
heart_half = ExtResource("3_4pxdq")
heart_0 = ExtResource("4_m8nf8")

[node name="Heart_full" type="Sprite2D" parent="."]
position = Vector2(7, 6)
texture = ExtResource("2_oocra")

[node name="Heart_full2" type="Sprite2D" parent="."]
position = Vector2(23, 6)
texture = ExtResource("2_oocra")

[node name="Heart_full3" type="Sprite2D" parent="."]
position = Vector2(39, 6)
texture = ExtResource("2_oocra")
